# eWartownik

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: app_controller.rs  db_operations.rs  main.rs
src/app_controller/: filter.rs  handlers.rs  refresh.rs
src/db_operations/: connection.rs  delete.rs  insert.rs  path.rs  queries.rs  schema.rs  types.rs  update.rs
ui/: add_person.slint  app.slint  custom_button.slint  groups_panel.slint  title.slint  types.slint
