[package]
name = "eWartownik"
version = "0.1.0"
authors = ["Jakub Konieczny"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/Fanoks/eWartownik"
license = "MIT"
build = "build.rs"

[dependencies]
cfg-if = "1.0.3"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_derive = "1.0.228"
slint = "1.13.1"

[build-dependencies]
slint-build = "1.13.1"
